syntax = "proto2";
package message.order;
message GetPayOrderCountReq {
    required int64 store_id = 1;
    required int64 user_id = 2;
}
